[metadata]
name = bter
summary = Collect electronic token infos from internet
description-file =
    README.md
author = Meng Along
author-email = alongmeng@gmail.com
home-page = https://github.com/mengalong/bter
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6


[files]
packages =
    bter
data_files =
	/etc/bter = /etc/bter/*

[entry_points]
console_scripts =
	bter-server = bter.cmd.server:main
	
